.provarCaches/00D5f000005vwGkEAI/objects/rstk__netchange__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_netchange</customHelpPage>
    <description>netchange__c</description>
    <fields>
        <fullName>rstk__netchange_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Inventory Item Master that a change has occurred since last run.</inlineHelpText>
        <label>Inventory Item Master</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>netchanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__netchange_icreplenish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specific Location Replenishment Maintenance record that changed, driving the Net Change record.</inlineHelpText>
        <label>Replenishment Location Maintenance</label>
        <referenceTo>rstk__icreplenish__c</referenceTo>
        <relationshipName>netchanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__netchange_processicreplenish__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, all Replenishments records will be processed in next Net Change run.</inlineHelpText>
        <label>Process Replenishments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__netchange_source__c</fullName>
        <inlineHelpText>The &quot;source&quot; record that was changed that caused the given item to be considered a Net Change.</inlineHelpText>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Net Change</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Net_Changes</fullName>
        <columns>NAME</columns>
        <columns>rstk__netchange_icitem__c</columns>
        <columns>rstk__netchange_processicreplenish__c</columns>
        <columns>rstk__netchange_icreplenish__c</columns>
        <columns>rstk__netchange_source__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Net Changes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Net Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>